fix: z-index

--- a/src/components/sections/header/cozy/style.module.scss
+++ b/src/components/sections/header/cozy/style.module.scss
@@ -1,5 +1,5 @@
 .header {
-  z-index: 100;
+  z-index: 20;
   background-color: hsl(var(--background) / .8);
   position: fixed;
   width: 100%;
